--- a/SCPersonalProject/Areas/Admin/Views/Contact/Index.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/Contact/Index.cshtml
@@ -48,7 +48,7 @@
                         <input type="text" id="txtTitle" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label"> Adı</label>
+                        <label class="form-label"> Adı</label>+
                         <input type="text" id="txtName" class="form-control">
                     </div>
                     <div class="mb-3">
