--- a/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
@@ -16,7 +16,7 @@
                                     <div class="col-sm-6 col-md-5">
 
                                         <div class="about-img">
-                                            <img src="~/person/assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                                            <img src="@item.ImageURl" class="img-fluid rounded b-shadow-a" alt="">
                                         </div>
                                     </div>
                                     <div class="col-sm-6 col-md-7">
