--- a/SCPersonalProject/Views/Default/HeaderPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeaderPartial.cshtml
@@ -1,7 +1,9 @@
-﻿<header id="header" class="fixed-top">
+﻿<header  id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-        <h1 class="logo"><a href="index.html">Sinan Çıvak</a></h1>
+        <h1 class="logo">
+            <img src="~/person/assets/img/sinanpnglogo.png" alt="SiNaNGiF" style="max-width: 150px; max-height: 150px; ">
+        </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="~/person/assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -18,4 +20,5 @@
         </nav><!-- .navbar -->
 
     </div>
+
 </header>
