--- a/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="hero" class="hero route bg-image" style="background-image: url(/person/assets/img/hero-bg.jpg)">
+﻿<div id="hero" class="hero route bg-image" style="background-image: url(/person/assets/img/ana.gif)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
         <div class="table-cell">
