--- a/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
@@ -28,25 +28,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="skill-mf">
-                                    <p class="title-s">Skill</p>
-                                    <span>HTML</span> <span class="pull-right">85%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                @foreach (var skill in item.Skılls)
+                                {<div class="skill-mf">
+                                        <p class="title-s">Yetenekler</p>
+                                        <span></span>@skill.Name <span class="pull-right">@skill.Value%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width:@skill.Value%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+
                                     </div>
-                                    <span>CSS3</span> <span class="pull-right">75%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span>PHP</span> <span class="pull-right">50%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>  
+
+                                }
+
                             </div>
                             <div class="col-md-6">
                                 <div class="about-me pt-4 pt-md-0">
