--- a/SCPersonalProject/Views/Shared/Components/PortfolioList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/PortfolioList/Default.cshtml
@@ -22,8 +22,9 @@
                     <div class="work-box">
                         <a href="@item.ImageURL" data-gallery="portfolioGallery" class="portfolio-lightbox">
                             <div class="work-img">
-                                <img src="@item.ImageURL" alt="" class="img-fluid">
+                                <img style="max-width: 200px; max-height: 150px; object-fit: contain; " src="@item.ImageURL" alt="" class="img-fluid">
                             </div>
+
                         </a>
                         <div class="work-content">
                             <div class="row">
