--- a/SCPersonalProject/Views/Default/HeaderPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeaderPartial.cshtml
@@ -13,7 +13,7 @@
                 <li><a class="nav-link scrollto" href="#about">Hakkımda</a></li>
                 <li><a class="nav-link scrollto" href="#services">Hizmetler</a></li>
                 <li><a class="nav-link scrollto " href="#work">Projeler</a></li>
-                <li><a class="nav-link scrollto " href="/Blog/Index/">Blog</a></li>
+                <li><a class="nav-link scrollto " href="/BlogRetro/Index/">Blog</a></li>
                 <li><a class="nav-link scrollto" href="#contact">İletişim</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
